# ezerpath

./: .gitignore  AI_COPILOT_IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  TODO.md  TODO_REVIEW.md  jobscan.plist  requirements.txt  run_daily.sh  scrapy.cfg
.github/workflows/: ci.yml
ai_service/: README.md  requirements.txt  server.py
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.test.tsx  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/eval/: golden_queries.json  snapshot_jobs.json
app/src-tauri/src/: ai_service_manager.rs  lib.rs  main.rs
app/src-tauri/src/ai/: followup.rs  mod.rs  native_embedder.rs  native_resume_parser.rs  ollama.rs  prompts.rs  ranking.rs  sentence_service.rs
app/src-tauri/src/commands/: ai.rs  jobs.rs  mod.rs  scan.rs  settings.rs
app/src-tauri/src/crawler/: mod.rs  webview_scraper.rs
app/src-tauri/src/db/: mod.rs
app/src-tauri/src/services/: ai_chat_service.rs  mod.rs  runtime_service.rs  scan_service.rs
app/src-tauri/tests/: eval.rs
app/src/components/: AnimatedNumber.tsx  ConfirmModal.tsx  JobDetailsDrawer.tsx  SettingsPanel.tsx  Sidebar.tsx
app/src/types/: custom-elements.d.ts  ipc.ts
app/src/utils/: confirmations.test.ts  confirmations.ts  conversationLoad.test.ts  conversationLoad.ts  fluidHover.ts  jobs.test.ts  jobs.ts  mutations.test.ts  mutations.ts  safeOpenUrl.test.ts  safeOpenUrl.ts  viewMotion.ts  watchlist.test.ts  (+1 more)
config/: keywords.yaml
crawler/: items.py  pipelines.py  settings.py
crawler/spiders/: onlinejobs.py  upwork.py
crawler/utils/: dedupe.py  markdown_report.py
docs/: CODEBASE_EXECUTION_PLAN.md
docs/archive/: ROADMAP.md
scripts/: dev.sh
tests/: test_onlinejobs_spider.py
(+5 files in other folders)
