[package]
name = "ezerpath"
version = "0.1.0"
description = "Ezerpath — Lightweight job hunting app with AI-powered resume builder"
authors = ["ggcldev"]
edition = "2021"

[lib]
name = "ezerpath_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.22"
rusqlite = { version = "0.35", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
fastembed = "4"
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"

[dev-dependencies]
tempfile = "3"
